# grfx-toybox

./: CMakeLists.txt  README.md  vcpkg.json
scripts/: build.ps1
shaders/: as.hlsl  ms.hlsl  ps.hlsl
src/: main.cpp  tinygltf.cpp
